# Tesserae

./: .gitignore
docs/context/: project_proposal (1).md
engine/: CMakeLists.txt  test_wgpu.cpp  test_wgpu.js  test_wgpu.wasm
engine/include/geometry/: Mesh.h  PrimitiveGenerator.h
engine/include/math/: aabb.h  mat4.h  quat.h  ray.h  vec3.h
engine/include/scene/: Camera.h  Node.h  Scene.h
engine/src/: main.cpp
engine/tests/: test_math.cpp
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
